# picosimd

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
ci/: run-all-tests.sh
ci/jobs/: build-and-test.sh  clippy.sh  rustfmt.sh
src/: amd64.rs  fallback.rs  lib.rs  test_utils.rs
src/amd64/: avx2.rs  avx2_composite.rs  avx512.rs  sse.rs
